Convert depricated new Double() and new Integer() constructions into Double.valueOf() and Integer.valueOf().